fix weird gap on contact page

--- a/src/components/contactFormStyles.module.css
+++ b/src/components/contactFormStyles.module.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 .ContactForm {
-  width: 48vw;
+  width: 50vw;
   display: grid;
   grid-template-columns: 0.5fr 2fr 2fr 0.5fr;
   grid-template-rows: auto;
