--- a/src/pages/contactStyles.module.css
+++ b/src/pages/contactStyles.module.css
@@ -3,4 +3,5 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  width: 100vw;
 }
